# multifloor_astar

./: .gitmodules  README.md
devel/: .catkin  .rosinstall
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/map_store/: DeleteMap.h  DeleteMapRequest.h  DeleteMapResponse.h  ListMaps.h  ListMapsRequest.h  ListMapsResponse.h  MapListEntry.h  PublishMap.h  PublishMapRequest.h  PublishMapResponse.h  RenameMap.h  RenameMapRequest.h  RenameMapResponse.h  SaveMap.h  SaveMapRequest.h  SaveMapResponse.h  SetOrigin.h  SetOriginRequest.h  SetOriginResponse.h
devel/include/multi_map_navigation/: MultiMapNavigationAction.h  MultiMapNavigationActionFeedback.h  MultiMapNavigationActionGoal.h  MultiMapNavigationActionResult.h  MultiMapNavigationFeedback.h  MultiMapNavigationGoal.h  MultiMapNavigationResult.h  MultiMapNavigationTransitionAction.h  MultiMapNavigationTransitionActionFeedback.h  MultiMapNavigationTransitionActionGoal.h  MultiMapNavigationTransitionActionResult.h  MultiMapNavigationTransitionFeedback.h  MultiMapNavigationTransitionGoal.h  MultiMapNavigationTransitionResult.h  SetMap.h  SetMapRequest.h  SetMapResponse.h
devel/include/object_msgs/: ClassifyObject.h  ClassifyObjectRequest.h  ClassifyObjectResponse.h  DetectObject.h  DetectObjectRequest.h  DetectObjectResponse.h  Object.h  ObjectInBox.h  Objects.h  ObjectsInBoxes.h
devel/include/reconfigure/: current_reconfigureConfig.h  position_reconfigureConfig.h
devel/lib/: libmoveit_robot_state_rviz_plugin.so.0.9.17  libmoveit_robot_state_rviz_plugin_core.so.0.9.17  libmoveit_rviz_plugin_render_tools.so.0.9.17
devel/lib/amcl/: amcl
devel/lib/astar/: astar
devel/lib/base_local_planner/: point_grid
devel/lib/champ_base/: message_relay_node  quadruped_controller_node  state_estimation_node
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/map_store/: map_manager  map_saver
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node  navtest
devel/lib/pkgconfig/: a1_config.pc  a1_description.pc  amcl.pc  astar.pc  base_local_planner.pc  carrot_planner.pc  champ.pc  champ_base.pc  champ_bringup.pc  champ_config.pc  champ_description.pc  champ_gazebo.pc  champ_msgs.pc  champ_navigation.pc  cheetah_control.pc  cheetah_description.pc  cheetah_show.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  map_store.pc  move_base.pc  move_slow_and_clear.pc  multi_map_navigation.pc  namespace_mux.pc  nav_core.pc  navfn.pc  object_msgs.pc  reconfigure.pc  robot_state_plugin.pc  rotate_recovery.pc  stage_multi_map_navigation.pc  voxel_grid.pc  warehouse_ros.pc  yocs_velocity_smoother.pc
devel/share/a1_config/cmake/: a1_configConfig.cmake
devel/share/a1_description/cmake/: a1_descriptionConfig.cmake
devel/share/amcl/cmake/: amclConfig.cmake
devel/share/astar/cmake/: astarConfig.cmake
src/: .rosinstall.bak  multifloor.py
src/astar_guidedog/: CMakeLists.txt  cmd.lcm  global_plannner_plugin.xml  package.xml
src/astar_guidedog/include/: Astar.h  Point_3D.h  global_planner.h
src/astar_guidedog/launch/: all.launch  astar.launch  floor_1.launch  floor_2.launch  highlevel.launch  two_floor.launch
src/astar_guidedog/maps/: house.pgm  house.yaml  l-shape_1.pgm  map-L.pgm  map-L.yaml  map-narrow-f-mod.pgm  map-narrow-f.pgm  map-narrow-f.yaml  map-wide.pgm  map.pgm  map.yaml  map2.pgm  map2.yaml  map_add2box.pgm  map_add2box.yaml  new-narrow-1.pgm  new-narrow-1.yaml  test.pgm  test.yaml  two-floor.yaml
src/astar_guidedog/rviz/: astar.rviz  multifloor.rviz
src/astar_guidedog/scripts/: cmd_lcm2.py  control.py  control_backup.py  multifloor.py
src/astar_guidedog/src/: Astar.cpp  OccMapTransform.cpp  Point_3D.cpp  global_planner.cpp  main.cpp
src/map_store/: CMakeLists.txt
src/map_store/launch/: add_map.launch
src/map_store/scripts/: add_map.py
src/map_store/src/: map_manager.cpp  map_saver.cpp
src/map_store/srv/: SetOrigin.srv
src/multi_map_navigation_pr2_coffee/: README.md
src/multi_map_navigation_pr2_coffee/multi_map_navigation/: .cproject  .project  CMakeLists.txt
src/multi_map_navigation_pr2_coffee/multi_map_navigation/scripts/: multi_map_navigation  multi_map_navigation_test  tf_transforms.py
src/multi_map_navigation_pr2_coffee/stage_multi_map_navigation/: .cproject  .project  CMakeLists.txt  move_base.xml
src/namespace_mux/: CMakeLists.txt  LICENSE  README.md
src/namespace_mux/src/: dynamic_topic_relay.cpp  dynamic_topic_relay.h  fake_tf_broadcaster.cpp  fake_tf_broadcaster.h  namespace_mux.cpp  namespace_mux.h
src/warehouse_ros/: CMakeLists.txt
src/warehouse_ros/src/: mongo_wrapper_ros.py
(+225 files in other folders)
